<resources>
    <string name="app_name">User</string>
    <string name="groupid">Group ID</string>
    <string name="user_name">Your Name</string>
    <string name="join">Join</string>
    <string name="joinGroup">Join Group</string>
    <string name="result">Result</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="fivty">50</string>
    <string name="onehundred">100</string>
    <string name="question">Question</string>
    <string name="value">Value</string>
    <string name="answer">Answer</string>
    <string name="success_answer">Your answer was submited successfully</string>
    <string name="answer_exists">You answered already</string>
</resources>
