<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentShow">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/SessionsControlRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="5dp">


            <TextView
                android:id="@+id/currentUser"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:textColor="#000"
                android:layout_marginLeft="20dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/result"
                android:visibility="gone"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="12dp"
                android:backgroundTint="#86464545"
                android:text="@string/result"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic" />

        </RelativeLayout>

        <TextView
            android:id="@+id/QuestionTextView"
            android:text="@string/question"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_below="@id/SessionsControlRelativeLayout"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:shadowRadius="5"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:textColor="#000"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cards"
            android:layout_below="@+id/QuestionTextView"
            android:gravity="center"
            android:paddingBottom="60dp">

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnCount="3"
                android:padding="10dp"
                android:rowCount="2"
                android:useDefaultMargins="true">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    android:id="@+id/one"
                    app:cardCornerRadius="4dp"
                    >

                    <TextView
                        android:id="@+id/value"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    android:id="@+id/five"
                    app:cardCornerRadius="4dp"

                    >

                    <TextView
                        android:id="@+id/value2"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/five"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/value3"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/ten"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/twelve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/value4"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/twenty"
                        android:textColor="#fff"
                        android:textSize="30sp"

                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/fivty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/value5"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/fivty"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/oneHundred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#181825"
                    android:padding="10dp"
                    app:cardCornerRadius="4dp"

                    >

                    <TextView
                        android:id="@+id/value6"
                        android:layout_width="90dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:text="@string/onehundred"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:background="#050"
                        />
                </androidx.cardview.widget.CardView>


            </GridLayout>


        </RelativeLayout>
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cards"
            android:id="@+id/AnswerButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="17dp"
            android:background="#050"
            android:text="Answer"
            android:textColor="#fff" />


    </RelativeLayout>


</FrameLayout>